# Pyhton

./: Day-2list.py  Day1.py  Dictionary.py  Member ship_oprator.py  README.md  Touple.py  dict_methods.py  excaption_handling.py  file.txt  file_i_o.py  functions.py  identity_oprator.py  lambda_function.py  list.py  loop.py  modules.py  practice.py  practise.py  program.py  set.py  set_meethod.py  stringfunction.py  task.py  tempCodeRunnerFile.py  turtle_graph.py  with.py
Python_project_jarvis/: jarvis.py  pyproject.toml
advance_python/: 01-types.py  02-match.py  03-itrator.py  04-generator.py  clousers.py  decorators.py  multithreading.py
numpy/: phase-1.ipynb  pyproject.toml
numpy/.ipynb_checkpoints/: phase-1-checkpoint.ipynb
oop/: Encapsulation.py  Inheritance.py  Type -of-inharitance.py  class.py  duck-typing.py  method-overloading.py  methodoverride.py  methods.py  polymorphism.py  super-method.py  tempCodeRunnerFile.py  viriable&init-constructor.py
oop/abstraction.py/: abstract-class.py  first.py  main.py  second.py
