[project]
name = "jarvis"
version = "0.1.0"
description = "my first project in python name is jarvis"
authors = [
    {name = "Muhammad Bahawal",email = "167578686+MuhammadBahawal@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "speechrecognition (>=3.14.1,<4.0.0)",
    "pyttsx3 (>=2.98,<3.0)",
    "pyaudio (>=0.2.14,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
