[project]
name = "libraries"
version = "0.1.0"
description = ""
authors = [
    {name = "MuhammadBahawal",email = "muhammadbahawalsher@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.3.2,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
